Add org and proj API without data store
